Fixed missing margin from commit 79a00d6.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -216,7 +216,7 @@ ul.sidebar-menu li.active a i {
 }
 
 #main-content {
-    margin-left: 200px;
+    margin-left: 205px;
     line-height: 1.8;
     font-size: 19px;
 }
